# awdit

./: .gitignore  LICENSE  README.md  pyproject.toml  terminal-output-TESTING.txt
config/: config.toml  config.toml.example
config/prompts/: hunter_1.md  hunter_2.md  referee_1.md  referee_2.md  skeptic_1.md  skeptic_2.md  solver_1.md  solver_2.md  swarm.md  swarm_danger_map.md  swarm_proof.md  swarm_seed.md
config/resources/: PROPOSED_FILE_STRUCTURE.txt
docs/: PROPOSED_FILE_STRUCTURE_CONFIG_BEHAVIOUR.txt  agent-isolation-workflow.md  architecture.md  development.md  e2e-cli-walkthrough.txt  prototype-notes.md  repo-wide-black-hat-auditing.md  swarm-pr-workflow-todo.md  swarm-task-list.md
docs/archive/: 2026-04-17-PROPOSED_FILE_STRUCTURE_CONFIG_BEHAVIOUR.md  2026-04-17-agent-isolation-workflow.md  2026-04-17-architecture.md  2026-04-17-development.md  2026-04-17-e2e-cli-walkthrough.md  2026-04-17-prototype-notes.md  2026-04-17-repo-wide-black-hat-auditing.md  2026-04-17-swarm-pr-workflow-todo.md  2026-04-17-swarm-task-list.md  README.md
docs/decisions/: 0001-review-pipeline.md  0002-swarm.md  0003-command-split-and-workflows.md  0004-scope-and-file-selection.md  0005-storage-and-artifacts.md
docs/roadmap/: open-questions.md  review-ci-workflow.md  ux.md
src/: cli.py  config.py  paths.py  provider_openai.py  repo_memory.py  runtime.py  state_db.py  swarm.py  terminal_ui.py
src/awdit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  (+1 more)
tests/: conftest.py  test_cli.py  test_config.py  test_paths.py  test_provider_openai.py  test_runtime.py  test_swarm.py
(+14 files in other folders)
