[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "awdit"
version = "0.1.0"
description = "Docs-first AI security audit workflow tooling"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = ["openai>=1.98.0"]

[project.scripts]
awdit = "awdit.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
